# MyEggBasket-AI

./: .gitignore  README.md  best_params.json  check_gcn_data.py  check_mongo_data.py  debug_error.html  final_dataset_with_gcn.csv  final_prediction_result.csv  finance_graph_data.pt  gcn_embeddings.npy  gcn_node_embeddings.pt  gcn_node_list.csv  gcn_output_check.csv  graph_edges.csv  main.py  node_mapping.json  pipeline.ipynb  stock_data_5days.csv  temp_integrated_financial_data.csv  test.ipynb  test_kis.py  test_mapping.py  test_portfolio_service.py  test_realtime_predict.py  test_sentiment_check.py
AI-app/: README.md  pyproject.toml
AI-app/src/ai_app/: main.py  pipeline_module.py
ai_pipeline/: check_es_data.py  check_final_data.py  check_single_merge.py  diagnose_disclosure_features.py  es_snapshot.http  final_order_plan.csv  fix_old_data.py  generate_config.py  make_final_data.py  make_training_data.py  pipeline_main.py  predict_main.py  report_analysis_runner.py  run_batch.py  scheduler.py  storage.py  test.py
ai_pipeline/analysis/: csv_value_chain.py  sentiment_aggregator.py  technical_analysis.py
ai_pipeline/boosting_model/: disclosure_feature_transform.py  end_to_end_trade.ipynb  feature_engineering.py  feature_expander.py  make_full_dataset.py  optuna_tuning.py  predict.py  realtime_feature_loader.py  train.py  train_from_csv.py  train_pipeline.py
data/: final_dataset_with_gcn.csv  gcn_embeddings.npy  graph_edges.csv  report_analysis_results.csv  value_chain_data.csv  value_chain_result.csv
models/: lgb_model.pkl  meta_model.pkl  xgb_model.pkl
(+75 files in other folders)
