[project]
name = "ai-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "ai_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
